--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "word-number",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "dist/word-number.js",
+  "module": "src/index.js",
   "scripts": {
     "build": "webpack"
   },
